--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "ip":            "0.0.x",
     "xml2js":        "0.1.x",
     "mime":          "1.2.x",
-    "morestreams":   "0.1.x",
+    "pause-stream":  ">=0.0.10",
     "pkginfo":       "0.2.x",
     "request":       "2.20.x",
     "underscore":    "1.4.x",
